# homebot

./: .gitignore  .travis.yml  CPPLINT.cfg  MANIFEST.in  README.md  ROScommands.odt  bootstrap  checkcpp.sh  fabfile.py  index.html  mkdocs.yml  parts.ods  pep8-changed.sh  pep8.sh  pip-requirements-test.txt  pylint.rc  search.html  setup.bash  setup.py  sitemap.xml  test.sh  tox.ini
development/: index.html
src/ros/src/ros_homebot/: CMakeLists.txt  README  package.xml
src/ros/src/ros_homebot/action/: Forward.action  MoveBase.action  Pivot.action  SpinHead.action  TTS.action  Tone.action
src/ros/src/ros_homebot/config/: analyzers.yaml  logging.conf  lrf.yaml  rpi_gpio.yaml
src/ros/src/ros_homebot/images/: README
src/ros/src/ros_homebot/launch/: all.launch  all_just_head.launch  all_just_torso.launch  arduino_relay.launch  diagnostics_aggregator.launch  diagnostics_viewer.launch  dock.launch  ekf.launch  head_arduino.launch  head_arduino_debug.launch  imu_visualizer.launch  init.launch  led_status.launch  lrf.launch  lrf_compressed_320.launch  lrf_compressed_320_debug.launch  lrf_straightener.launch  mjpeg_server.launch  power.launch  qr_tracker.launch  qr_tracker_test.launch  raspicam_compressed_320.launch  raspicam_compressed_320_2.launch  raspicam_compressed_640.launch  raspicam_compressed_800.launch  raspicam_compressed_large.launch  raspicam_raw.launch  robot_state_publisher.launch  rpi_gpio.launch  rtabmap.launch  serial_head.launch  serial_torso.launch  serial_torso_fix1.launch  serial_torso_fix2.launch  serial_torso_fix3.launch  sound.launch  system.launch  teleop.launch  teleop_debug.launch  test_node.launch  (+2 more)
src/ros/src/ros_homebot/nodes/: arduino_relay.py  common.py  diagnostic.py  dock.py  forward_client.py  head_motion.py  head_node.py  head_pan_calibrate.py  head_relay.py  imu_visualizer.py  init_node.py  led_status_node.py  motion.py  node.py.template  power_node.py  say.py  serial_node.py  sound.py  spin_head.py  spin_head_client.py  state.py  system_node.py  test_node.py  torso_motion.py  torso_motion_server.py  torso_node.py  torso_relay.py  track_qr.py  turn_client.py  wander_client.py
src/ros/src/ros_homebot/src/firmware/: test_modulus  test_modulus.cc  test_modulus.py  write_pinouts.py
src/ros/src/ros_homebot_base/: CMakeLists.txt  README.md  package.xml
src/ros/src/ros_homebot_base/launch/: serial_torso.launch
src/ros/src/ros_homebot_base/src/: serial_echo_node.cpp  serial_example_node.cpp
src/ros/src/ros_homebot_description/: CMakeLists.txt  README  package.xml
src/ros/src/ros_homebot_description/launch/: display.launch  display_real.launch
src/ros/src/ros_homebot_description/rviz/: urdf.rviz
src/ros/src/ros_homebot_description/urdf/: homebot-torso.urdf.xacro  homebot.urdf.xacro  materials.urdf.xacro
src/ros/src/ros_homebot_firmware/: CMakeLists.txt  package.xml  write_pinouts.py
src/ros/src/ros_homebot_firmware/common/: ano.ini  buildall
src/ros/src/ros_homebot_firmware/common/src/: ArduinoTemperatureSensor.h  ID.h  SerialPort.h  SerialPortFixedLength.h  Smooth.h  StringUtils.h  link_common.sh  test.ino
src/ros/src/ros_homebot_firmware/head/: ArduinoPinout.csv  Makefile  README  ano.ini  buildall  serial  upload
src/ros/src/ros_homebot_firmware/head/lib/: .gitignore
src/ros/src/ros_homebot_firmware/head/src/: .gitignore  Microphone.h  NeckPositionSensor.h  PanController.h  TiltController.h  main.ino
src/ros/src/ros_homebot_firmware/torso/: ArduinoPinout.csv  Makefile  README  ano.ini  buildall  buildallupload  buildalluploadserial  serial  upload
src/ros/src/ros_homebot_firmware/torso/src/: .gitignore  AccelGyroSensor.h  BatteryTemperatureSensor.h  BatteryVoltageSensor.h  BumperSensor.h  EdgeSensor.h  ExternalPowerSensor.h  I2CAddresses.h  MotionController.h  PowerController.h  Sensor.h  StatusButtonSensor.h  StatusLightController.h  UltrasonicSensor.h  main.ino
src/ros/src/ros_homebot_lrf/: CMakeLists.txt  README.md  apt-requirements.txt  package.xml  pip-requirements.txt  setup.py
src/ros/src/ros_homebot_lrf/config/: calibration.yaml.example  calibration_320.yaml  calibration_320_blank.yaml
src/ros/src/ros_homebot_lrf/nodes/: lrf_node.py  lrf_plot.py
src/ros/src/ros_homebot_lrf/scripts/: estimate_depth.py
src/ros/src/ros_homebot_lrf/src/ros_homebot_lrf/: constants.py  lrf.py  utils.py
src/ros/src/ros_homebot_msgs/: CMakeLists.txt  README  package.xml  update_makelist.py
src/ros/src/ros_homebot_msgs/msg/: ArduinoTemperatureChange.msg  BatteryChargeRatioChange.msg  BatteryVoltageChange.msg  BumperChange.msg  CPUUsage.msg  DiskUsage.msg  ExternalPowerChange.msg  ImuAccelerometerChange.msg  ImuCalibrationChange.msg  LaserLineColumns.msg  MicrophoneChange.msg  MotorCalibrationChange.msg  MotorEncoderChange.msg  MotorErrorChange.msg  PacketRead.msg  PanAngleChange.msg  PanFullRevCountChange.msg  Pong.msg  README  RemainingTime.msg  StatusButtonChange.msg  UltrasonicChange.msg
src/ros/src/ros_homebot_msgs/srv/: Led.srv  MicrophoneEnable.srv  MotorAcceleration.srv  MotorSpeed.srv  Move.srv  PacketWrite.srv  PanAngle.srv  PanPower.srv  PanSpeed.srv  Sleep.srv  TTS.srv  Tone.srv  Twist.srv
src/ros/src/ros_homebot_python/: CMakeLists.txt  README  package.xml  setup.py
src/ros/src/ros_homebot_python/audio/: numnuts.sh
src/ros/src/ros_homebot_python/config/: torso.yaml
src/ros/src/ros_homebot_python/launch/: head.launch  torso.launch
src/ros/src/ros_homebot_python/nodes/: head_node.py  power_node.py  system_node.py  torso_node.py
src/ros/src/ros_homebot_python/src/ros_homebot_python/: constants.py  exceptions.py  mylogging.py  node.py  packet.py  robot.py  tests.py  utils.py
src/ros/src/ros_homebot_teleop/: CMakeLists.txt  README  apt-requirements.txt  package.xml  pip-requirements.txt
src/ros/src/ros_homebot_teleop/launch/: teleop.launch
src/ros/src/ros_homebot_teleop/nodes/: mjpeg_streamer.py  teleop_node.py
src/ros/src/ros_homebot_teleop/src/: runserver.py  settings.py  urls.py  wsgi.py
src/ros/src/ros_homebot_teleop/src/homebot_dashboard/: server.py  sockets.py  urls.py  views.py
(+1068 files in other folders)
