<package>
  <name>ros_homebot</name>
  <version>0.2.0</version>
  <description>
    Top-level package for Homebot. 
  </description>
  <author>Chris Spencer</author>
  <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>
  <license>BSD</license>
  <url></url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>serial</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ros_homebot_firmware</run_depend>
  <run_depend>ros_homebot_msgs</run_depend>
  <run_depend>ros_homebot_python</run_depend>
  <run_depend>ros_homebot_teleop</run_depend>
  <run_depend>ros_homebot_lrf</run_depend>
  <run_depend>rpi_gpio</run_depend>

<!-- We don't do this so we can install top-level launch files. 
  <export>
   <metapackage/>
  </export>
-->
</package>
