<?xml version="1.0"?>
<package>
  <name>ros_homebot_lrf</name>
  <version>0.0.0</version>
  <description>The ros_homebot_lrf package</description>

  <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ros_homebot_lrf</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>ros_homebot_msgs</run_depend>
  <run_depend>ros_homebot_python</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>