<package>
  <name>ros_homebot_msgs</name>
  <version>0.2.0</version>
  <description>
    ROS Arduino Messages.
  </description>
  <author>Chris Spencer</author>
  <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>
  <license>BSD</license>
  <url></url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
