<package>
    <name>ros_homebot_python</name>
    <version>0.2.0</version>
    <description>
        Core Python functions, classes and nodes for controlling Homebot.
    </description>
    <author>Chris Spencer</author>
    <maintainer email="chrisspen@gmail.com">Chris Spencer</maintainer>
    <license>BSD</license>
    <url></url>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rostest</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <!-- <run_depend>nav_msgs</run_depend> -->
    <run_depend>tf</run_depend>
    <run_depend>ros_homebot_msgs</run_depend>
    <run_depend>python-serial</run_depend>
</package>
